	* Modified 'rivendell/editcut.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcart.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcarts.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcut.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listcuts.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listgroup.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listgroups.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listlog.c' to use 'RD_ReadBool()'.
	* Modified 'rivendell/listlogs.c' to use 'RD_ReadBool()'.
2015-11-20 Fred Gleason <fredg@paravelsystems.com>
	* Changed the names of the header and implementation files in
	'rivendell/' to match the names of the respective functions.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Corrected names of header files in 'rivwebcapi.spec.in'.
	* Added an invocation to AR_GCC_TARGET() in 'configure.ac'.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Corrected dependency in 'rivwebcapi.spec.in'.
2016-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Added '-lcurl' to the 'libs:' field in 'rivendell.pc.in'.
2016-11-04 Todd Baker <bakert@rfa.org>
        * Fixed fprintf typo in all *.c files in Erreor Code Display.
	  Added CURLOPT_ERRORBUFFER to Error Output for Text version of
	  Curl Lib errors. Updated Originator.
2016-11-28 Todd Baker <bakert@rfa.org>
	* Added New parameters for rd_import.c. This allows for Cart Creation
          if it doesn't exist. Includes create flag and group name. Updated Docbook entry.
          Also updated importcart_test to include this functionality. Updated
	  Originator.
2017-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error in 'rivendell/rd_listlog.c' that caused
	the last character of the log name to be truncated when calling
	rd_listlog().
2017-01-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rivendell/rd_listlog.c' that used the incorrect
	keyword for detecting audio carts when calling rd_listlog().