@@ -106,3 +106,7 @@
 2017-01-11 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'rivendell/rd_listlog.c' that used the incorrect
 	keyword for detecting audio carts when calling rd_listlog().
+2017-01-12 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'rivendell/rd_listlog.c' that caused the event type
+	to be set to 'Marker' for all hard-timed events when calling
+	rd_listlog().
